@@ -1,5 +1,10 @@
 2012-03-22  Sergio Martin <sergio.martin@artica.es>
 
+	* include/graphs/functions_pchart.php: Added calculation
+	of the left side of the graph space
+
+2012-03-22  Sergio Martin <sergio.martin@artica.es>
+
 	* include/graphs/functions_pchart.php
 	include/graphs/pChart/pDraw.class.php: Added to pchart library the
 	parameter to set an independent font size to graph ticks and set it
